--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=jobhunter
 
+-Dspring.devtools.restart.enabled=true
+
+-Dspring.devtools.livereload.enabled=true
+
+
 #config database
 ###
 spring.jpa.hibernate.ddl-auto=update
@@ -7,7 +12,7 @@ spring.datasource.url=jdbc:mysql://localhost:3307/jobhunter
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+spring.jpa.show-sql=true
 ###
 
 #config upload file
