--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.application.name=jobhunter
 #config database
 ###
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3307/jobhunter
+spring.datasource.url=jdbc:mysql://localhost:3306/jobhunter
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 ###
