feat(subscriber): add subscriber module

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 HELP.md
+
+*.properties
+
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
@@ -35,3 +38,6 @@ out/
 
 ### VS Code ###
 .vscode/
+
+
+
