--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,3 +48,14 @@ spring.servlet.multipart.max-request-size=50MB
 #base path for file
 hoidanit.upload-file.base-uri=file:///D:/Workspace/Java/Spring-REST/upload/
 
+
+###
+#config email with Gmail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+#config email, app password
+spring.mail.username=tantruongspring@gmail.com
+spring.mail.password=duffrwmmryqznrpv
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+###
